# Eigen-Rust

./: .editorconfig  .gitignore  .rustfmt.toml  Cargo.toml
src/: errors.rs  game.rs  game_manager.rs  game_tags.rs  game_triggers.rs  game_zones.rs  lib.rs  macros.rs
src/card_sets/: mod.rs  test_set.rs
src/cards/: card.rs  card_container.rs
src/cardsets/: mod.rs  test_set.rs
src/contracts/: mod.rs
src/contracts/cards/: card.rs  card_container.rs  errors.rs  mod.rs
src/contracts/effects/: card_effect.rs  cardeffect.rs  mod.rs
src/contracts/entities/: character.rs  entity.rs  entity_castable.rs  entity_data.rs  entity_initializable.rs  errors.rs  mod.rs  playable.rs
src/contracts/models/: card.rs  cardcontainer.rs  entity.rs  entity_data.rs  mod.rs
src/contracts/state_machine/: method.rs  mod.rs  program.rs  shared_state.rs
src/core/: mod.rs
src/core/cardsets/: mod.rs  testset.rs
src/core/effects/: cardeffect.rs  mod.rs
src/core/macros/: define_card.rs  entity_cast.rs  mod.rs
src/core/models/: card.rs  cardcontainer.rs  game.rs  (+3 more)
src/effects/: card_effect.rs  mod.rs
src/entities/: core_entities.rs  entity.rs  entity_data.rs  mod.rs
src/enums/: card.rs  contracted.rs  evaluation.rs  game.rs  mod.rs  operations.rs
src/game/: config.rs  errors.rs  mod.rs
src/operations/: mod.rs  play_options.rs
src/state_machine/: action_states.rs  action_trigger_states.rs  core_states.rs  dynamic.rs  internal_states.rs  method.rs  mod.rs  shared_data.rs  shared_state.rs  transitions.rs  trigger_states.rs  wait_states.rs
tests/: integration_reactive.rs
(+25 files in other folders)
